# Number-Plate-Detection-HumAIn

./: README.md  pyproject.toml
1.Data Extraction And Model Creation/: ImageDownload.py  VehicleDataDownload.ipynb
1.Data Extraction And Model Creation/.ipynb_checkpoints/: VehicleDataDownload-checkpoint.ipynb
1.Data Extraction And Model Creation/model generator/: model_generator.ipynb
1.Data Extraction/model generator/.ipynb_checkpoints/: model_generator-checkpoint.ipynb
2.Prediction/: DataFromVideo.py  ImageDetect.py  PlateRecognize.py  final.png.txt
2.Prediction/utils/: DetectChars.py  DetectPlates.py  Preprocess.py
